package SKUTask;

public enum Priority {
    HIGH, MEDIUM, LOW
}
