@startuml
!include ../style.puml
skinparam arrowThickness 1.1
skinparam classAttributeIconSize 0
hide circle

class SKUList {}

class SKU {}

class SKUTaskList {}

class SKUTask {}

enum Location <<enumeration>> {}

enum Priority <<enumeration>> {}

SKUList "1" --> "*" SKU : contains

SKU "1" --> "1" SKUTaskList : encapsulates
SKU "1" --> "1" Location : located at

SKUTaskList "1" --> "*" SKUTask : contains

SKUTask "1" --> "1" Priority : priority level

SKUList -[hidden]down- SKU
SKU -[hidden]down- SKUTaskList
SKUTaskList -[hidden]down- SKUTask
SKU -[hidden]down- Location
SKUTask -[hidden]down- Priority

@enduml